# serverless-docker

./: LICENSE  docker-compose.yml  traefik.dev.toml  traefik.prod.toml
pyserverless/: dockerfile  main.py  pyproject.toml
pyserverless/core/: functions.py  packages.py  settings.py
serverless_deno/: deno.json  dockerfile  functions.toml  main.ts  scripts.json
serverless_deno/core/: functions.ts  settings.ts
