[tool.poetry]
name = "serverless"
version = "0.1.0"
description = "A serverless server, that help you add serverless functions to your project."
authors = ["Mohamed-Kaizen <m.n.kaizen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
orjson = "^3.8.5"
pillow = "^9.4.0"
email-validator = "^1.3.0"
python-multipart = "^0.0.5"
watchfiles = "^0.18.1"
tomlkit = "^0.11.6"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-annotations = "^2.9.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.1.14"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.2"
isort = "^5.11.4"
radon = "^5.1.0"
mypy = "^0.991"

[tool.isort]
profile="black"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
